// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should render "people" mode correctly  1`] = `
<div
  className="card  "
>
  <div
    className="card-body"
  >
    <h5
      className="card-title"
    >
      Person 1
    </h5>
    <p
      className="card-text"
    >
      <span
        className=""
      >
        Mass: 
        100
      </span>
    </p>
  </div>
</div>
`;

exports[`Card should render "starship" mode correctly  1`] = `
<div
  className="card  "
>
  <div
    className="card-body"
  >
    <h5
      className="card-title"
    >
      Person 1
    </h5>
    <p
      className="card-text"
    >
      <span
        className=""
      >
        Crew: 
      </span>
    </p>
  </div>
</div>
`;

exports[`Card should render empty card correctly  1`] = `
<div
  className="card  "
>
  <div
    className="card-body"
  >
    <h5
      className="card-title"
    >
      -----
    </h5>
    <p
      className="card-text"
    >
      <span
        className=""
      >
        Mass: 
        -----
      </span>
    </p>
  </div>
</div>
`;
